--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,7 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-/*.slider {*/
-    /*width: 80% !important;*/
-/*}*/
-.mapContainer .rc-slider-handle:before {
+.sliderThing .rc-slider-handle:before {
     content: attr(aria-valuenow);
     font-size: 2.75rem;
     position: absolute;
@@ -14,9 +11,11 @@ body {
     transform: translateX(-50%);
 }
 
-.soundingsData {
-    padding: 3.25rem;
+.infoBox {
+    padding: 2.75rem;
 }
-.mapContainer .rc-slider-mark-text {
-
+.sliderThing {
+    width: 90% !important;
+    position: absolute;
+    left: 5%;
 }
