--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.soundingContainer {
+    width: 80%;
+}
 .sliderThing .rc-slider-handle:before {
     content: attr(aria-valuenow);
     font-size: 2.75rem;
@@ -14,7 +17,12 @@ body {
 .infoBox {
     padding: 2.75rem;
 }
-.sliderThing {
+/* .sliderThing { */
+    /* width: 90% !important; */
+    /* position: absolute; */
+    /* left: 5%; */
+/* } */
+.sliderThing{
     width: 90% !important;
     position: absolute;
     left: 5%;
